Wed Jun  4 09:36:54 UTC 2014  Johnny Willemsen  <jwillemsen@remedy.nl>

        * modules/VC14ProjectCreator.pm:
        * modules/VC14WorkspaceCreator.pm:
        * templates/vc14dll.mpt:
        * templates/vc14exe.mpt:
        * templates/vc14lib.mpt:
        * templates/vc14libexe.mpt:
        * templates/vc14platforms.mpt:
          New files for msvc14, partly updated, not tested yet

Fri May 23 19:11:37 UTC 2014  Chad Elliott  <elliott_c@ociweb.com>

        * docs/templates/vc10.txt:
        * templates/vc10.mpd:

          Modified to allow the setting of the TargetFrameworkVersion to
          change the TargetFrameworkVersion of managed C++ projects.  Thanks
          to Charles Calkins <calkinsc at ociweb dot com> for bringing this
          to my attention.

Tue May  6 12:32:53 UTC 2014  Chad Elliott  <elliott_c@ociweb.com>

        * docs/templates/vc10.txt:
        * templates/vc10.mpd:

          Added a template variable to allow the user to override the
          default intermediate directory.  Thanks to Craig Miller
          <craigwmiller at yahoo dot com> for providing this patch.

        * docs/templates/vc8csharp.txt:

          Document a missing template variable.

Thu Apr 10 08:26:17 UTC 2014  Johnny Willemsen  <jwillemsen@remedy.nl>

        * config/nddslib.mpb:
          Set RTI_UNIX on non windows

Thu Apr 10 06:38:25 UTC 2014  Johnny Willemsen  <jwillemsen@remedy.nl>

        * config/nddslib.mpb:
          Should set RTI_UNIX on linux

Wed Apr  9 13:11:59 UTC 2014  Johnny Willemsen  <jwillemsen@remedy.nl>

        * config/nddslib.mpb:
          If prop:windows is not set, don't set RTI_UNIX, could be that
          we are on windows using GNU make. If ACE_PLATFORM_CONFIG is
          config-win32.h, we do use -DRTI_WIN32, we are than on Windows

Fri Mar 21 16:32:10 UTC 2014  Adam Mitz  <mitza@ociweb.com>

        * config/sqlapi.mpb:
          Added base project for SQLAPI (www.sqlapi.com).

        * docs/templates/make.txt: