@@ -16,7 +16,7 @@ project {
 
   }
 
-  specific (vc10, vc11, vc12) {
+  specific (vc10, vc11, vc12, vc14) {
 	  runtime_library = MultiThreaded
     ImageHasSafeExceptionHandlers = false
 
