@@ -4,7 +4,7 @@ project : pin {
   specific (prop:windows) {
     link_options += /EXPORT:main
   }
- 
+
   verbatim (make, top) {
     no_hidden_visibility = 1
   }
@@ -43,7 +43,7 @@ feature (ia32) {
     link_options += /ENTRY:Ptrace_DllMainCRTStartup@12
   }
 
-  specific (vc10, vc11, vc12) {
+  specific (vc10, vc11, vc12, vc14) {
     EntryPointSymbol = Ptrace_DllMainCRTStartup@12
   }
 }
@@ -53,7 +53,7 @@ feature (intel64) {
     link_options += /ENTRY:Ptrace_DllMainCRTStartup
   }
 
-  specific (vc10, vc11, vc12) {
+  specific (vc10, vc11, vc12, vc14) {
     EntryPointSymbol = Ptrace_DllMainCRTStartup
   }
 }
