@@ -7,7 +7,7 @@ project {
   } else {
     subsystem = 2
   }
-  specific(vc10, vc11, vc12) {
+  specific(vc10, vc11, vc12, vc14) {
     subsystem = Windows
   }
 }
