@@ -1,3 +1,12 @@
+Mon Jun 23 12:49:54 UTC 2014  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * config/pin_base.mpb:
+        * config/pintool.mpb:
+        * config/winapp.mpb:
+        * docs/html/MakeProjectCreator.html:
+        * registry.pl:
+          Added support for msvc14
+
 Wed Jun  4 09:36:54 UTC 2014  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * modules/VC14ProjectCreator.pm:
